--- a/build.properties
+++ b/build.properties
@@ -20,4 +20,5 @@ bin.includes = plugin.xml,\
                lib/org.eclipse.nebula.widgets.calendarcombo_1.0.0.jar,\
                lib/org.eclipse.nebula.widgets.cdatetime_0.14.0.201602041833.jar,\
                lib/org.eclipse.nebula.widgets.gallery_0.6.0.201602041833.jar,\
-               lib/org.eclipse.nebula.widgets.tablecombo_1.0.0.201602041833.jar
+               lib/org.eclipse.nebula.widgets.tablecombo_1.0.0.201602041833.jar,\
+               lib/sqljdbc4.jar
