--- a/.classpath
+++ b/.classpath
@@ -6,7 +6,7 @@
 	<classpathentry exported="true" kind="lib" path="lib/gson-2.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/joda-time-1.6.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/mysql-connector-java-5.1.9.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/net.sf.paperclips_1.0.4.200908120926.jar" sourcepath="D:/eclipse-rcp/nebula-repository/plugins/org.eclipse.nebula.paperclips.widgets.source_2.0.0.201602041833.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/net.sf.paperclips_1.0.4.200908120926.jar" sourcepath="D:/eclipse-rcp/src"/>
 	<classpathentry exported="true" kind="lib" path="lib/net.sf.paperclips.ui_1.0.4.200908120926.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/org.eclipse.nebula.cwt_0.9.0.201602041833.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/org.eclipse.nebula.examples_1.0.4.201602041833.jar"/>
