--- a/plugin.xml
+++ b/plugin.xml
@@ -18,7 +18,7 @@
          </property>
          <property
                name="appName"
-               value="lehanhcosmetic">
+               value="lehanhproduct Name">
          </property>
       </product>
    </extension>
